--- a/index.html
+++ b/index.html
@@ -516,7 +516,7 @@
     <section id="hero">
         <div class="container">
             <div class="hero-content">
-                <img src="https://www.google.com/imgres?q=shameth%20fernando&imgurl=https%3A%2F%2Flookaside.fbsbx.com%2Flookaside%2Fcrawler%2Finstagram%2FDEEta4bNHbQ%2F0%2Fimage.jpg&imgrefurl=https%3A%2F%2Fwww.instagram.com%2Fshamixfdo%2Freel%2FC5aTPVepMF6%2F%3Flocale%3Dzh_CN%26hl%3Dbg&docid=nqevNnGSC6FKoM&tbnid=MUiKRzIqq8Ij5M&vet=12ahUKEwj-n-mq1oCOAxXvcWwGHSL4N70QM3oECGUQAA..i&w=512&h=640&hcb=2&itg=1&ved=2ahUKEwj-n-mq1oCOAxXvcWwGHSL4N70QM3oECGUQAA" alt="Shameth Fernando" class="profile-pic">
+                <img src="https://www.google.com/imgres?q=shameth%20fernando&imgurl=https%3A%2F%2Flookaside.fbsbx.com%2Flookaside%2Fcrawler%2Finstagram%2FDDW-M_cttQw%2F0%2Fimage.jpg&imgrefurl=https%3A%2F%2Fwww.instagram.com%2Fshamixfdo%2Freel%2FC5aTPVepMF6%2F%3Flocale%3Dzh_CN%26hl%3Dbg&docid=nqevNnGSC6FKoM&tbnid=Uwgc2pOJlZxIxM&vet=12ahUKEwj-n-mq1oCOAxXvcWwGHSL4N70QM3oECBYQAA..i&w=621&h=640&hcb=2&itg=1&ved=2ahUKEwj-n-mq1oCOAxXvcWwGHSL4N70QM3oECBYQAA" alt="Shameth Fernando" class="profile-pic">
                 <h2>Innovating Digital Experiences with Shameth Fernando</h2>
                 <p>As a **passionate Web Developer**, I craft dynamic, user-friendly, and visually stunning web solutions. I transform complex ideas into intuitive digital realities.</p>
                 <a href="#portfolio" class="button">Explore My Projects</a>
