--- a/index.html
+++ b/index.html
@@ -249,8 +249,9 @@
         }
 
         #about .about-image img {
-            max-width: 100%;
-            height: auto;
+            /* මෙතන තමයි වෙනස් කළේ */
+            max-width: 300px; /* උපරිම පළල pixels 300කට සකසයි */
+            height: auto;    /* උස ස්වයංක්‍රීයව සකසයි */
             border-radius: 15px;
             box-shadow: 0 10px 30px rgba(0,0,0,0.15); /* More prominent image shadow */
             transition: transform 0.4s ease;
@@ -516,7 +517,7 @@
     <section id="hero">
         <div class="container">
             <div class="hero-content">
-                <img src="https://lookaside.fbsbx.com/lookaside/crawler/instagram/DEEta4bNHbQ/0/image.jpg" alt="Shameth Fernando" class="profile-pic">
+                <img src="shameth.jpeg" alt="Shameth Fernando" class="profile-pic">
                 <h2>Innovating Digital Experiences with Shameth Fernando</h2>
                 <p>As a **passionate Web Developer**, I craft dynamic, user-friendly, and visually stunning web solutions. I transform complex ideas into intuitive digital realities.</p>
                 <a href="#portfolio" class="button">Explore My Projects</a>
@@ -540,7 +541,7 @@
                     </p>
                 </div>
                 <div class="about-image">
-                    <img src="https://lookaside.fbsbx.com/lookaside/crawler/instagram/DGHzsdtIrHQ/0/image.jpg" alt="Shameth Fernando - Professional Profile">
+                    <img src="shameth1.jpeg" alt="Shameth Fernando - Professional Profile">
                 </div>
             </div>
         </div>
@@ -606,7 +607,7 @@
                         <a href="#" target="_blank" class="button">View Project</a>
                     </div>
                 </div>
-                </div>
+            </div>
         </div>
     </section>
 
